[project]
name = "d4orm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "control>=0.10.2",
    "distrax>=0.1.5",
    "gputil>=1.4.0",
    "gym>=0.26.2",
    "gymnax>=0.0.9",
    "imageio>=2.37.0",
    "jax[cuda12]>=0.7.0",
    "jaxopt>=0.8.5",
    "matplotlib>=3.10.3",
    "meshcat>=0.3.2",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
    "tyro>=0.9.27",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "d4orm"
module-root = ""
